Update GET /api/books endpoint to take query parameters as filter input