@@ -1,10 +1,12 @@
 package cz.muni.fi.pa165.repository;
 
 import cz.muni.fi.pa165.dao.BookDAO;
+import org.openapitools.model.BookStatus;
 import org.springframework.stereotype.Repository;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @Repository
@@ -13,8 +15,15 @@ public class BookRepository {
 
     private static Long index = 1L;
 
-    public List<BookDAO> findAll() {
-        return books.values().stream().toList();
+    public List<BookDAO> findByFilter(String title, String author, String description, BookStatus status) {
+        return books
+                .values()
+                .stream()
+                .filter(book -> (title == null || book.getTitle().equals(title)) &&
+                        (author == null || book.getAuthor().equals(author)) &&
+                        (description == null || book.getDescription().contains(description.toLowerCase())) &&
+                        (status == null || book.getStatus().equals(status)))
+                .collect(Collectors.toList());
     }
 
     public BookDAO store(BookDAO bookDAO) {
